--- a/polling-app/package.json
+++ b/polling-app/package.json
@@ -10,5 +10,12 @@
     "node"
   ],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "async": "^2.1.2",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "rethinkdb": "^2.3.3",
+    "socket.io": "^1.5.1"
+  }
 }
