--- a/polling-app/package.json
+++ b/polling-app/package.json
@@ -17,5 +17,10 @@
     "express": "^4.14.0",
     "rethinkdb": "^2.3.3",
     "socket.io": "^1.5.1"
+  },
+  "devDependencies": {
+    "mocha": "^3.1.2",
+    "should": "^11.1.1",
+    "supertest": "^2.0.1"
   }
 }
