--- a/polling-app/package.json
+++ b/polling-app/package.json
@@ -24,6 +24,6 @@
     "supertest": "^2.0.1"
   },
   "scripts": {
-    "test": "make test"
+    "test": "./node_modules/.bin/mocha -u exports test/*/*"
   }
 }
