--- a/polling-app/package.json
+++ b/polling-app/package.json
@@ -20,7 +20,9 @@
   },
   "devDependencies": {
     "mocha": "^3.1.2",
+    "proxyquire": "^1.7.10",
     "should": "^11.1.1",
+    "sinon": "^1.17.6",
     "supertest": "^2.0.1"
   },
   "scripts": {
