--- a/polling-app/package.json
+++ b/polling-app/package.json
@@ -23,6 +23,7 @@
     "proxyquire": "^1.7.10",
     "should": "^11.1.1",
     "sinon": "^1.17.6",
+    "sinon-mongoose": "^1.3.0",
     "supertest": "^2.0.1"
   },
   "scripts": {
