fixing issue in code

--- a/polling-app/package.json
+++ b/polling-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pol",
+  "name": "polling-app",
   "version": "1.0.0",
   "description": "Test Node js polling app ",
   "main": "app.js",
