initial adding list all poll function to ui
cors also needed to enable from the server
also a lite-server will now serve the web ui

--- a/polling-app/package.json
+++ b/polling-app/package.json
@@ -24,6 +24,7 @@
     "supertest": "^2.0.1"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha -u exports test/*/*"
+    "test": "./node_modules/.bin/mocha -u exports test/*/*",
+    "start": "node app.js"
   }
 }
